--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -24,6 +24,7 @@ jobs:
           node-version: '14.x'
           registry-url: https://registry.npmjs.org/
       - run: npm ci
+      - run: npm --no-git-tag-version version {{ github.run.id }}
       - run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
