--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -2,7 +2,7 @@ name: Node.js Package
 
 on:
   release:
-    types: [created]
+    types: [published]
 
 jobs:
   build:
@@ -24,7 +24,6 @@ jobs:
           node-version: '14.x'
           registry-url: https://registry.npmjs.org/
       - run: npm ci
-      - run: npm --no-git-tag-version version ${{github.run.id}}
       - run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
