--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -13,6 +13,8 @@ jobs:
         with:
           node-version: '14.x'
       - run: npm ci
+      - run: npm version ${{github.run.id}}
+    
 
   publish-npm:
     needs: build
