--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -13,7 +13,7 @@ jobs:
         with:
           node-version: '14.x'
       - run: npm ci
-      - run: npm version ${{github.run.id}}
+      - run: npm version ${{ ci.ref.name }}
     
 
   publish-npm:
