--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -14,7 +14,7 @@ jobs:
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
-            return github.ref.replace(/\/refs\/tags\//, '');
+            return $GITHUB_REF.replace(/\/refs\/tags\//, '');
       - name: Echo
         run: echo ${{ steps.version.outputs.result }}
         
