--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -9,8 +9,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:    
       - uses: actions/github-script@v3
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
         id: set-result
         with:
           script: return context.ref.replace('/refs/tags/', '')
@@ -18,7 +16,13 @@ jobs:
       - name: Get result
         run: echo "${{steps.set-result.outputs.result}}"
       - name: Set Version
-        run: npm version --no-git-tag-version "${{steps.set-result.outputs.result}}"
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2
+        with:
+          node-version: '14.x'
+      - run: npm version --no-git-tag-version "${{steps.set-result.outputs.result}}" 
+
+      - run: npm ci
     
   build:
     needs: version
