--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -8,18 +8,17 @@ jobs:
   version:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
-        with:
-          node-version: '14.x'
+      - name: Set Result
       - uses: actions/github-script@v3
         id: set-result
         with:
           script: return context.ref.replace('/refs/tags/', '')
           result-encoding: string
-      - name: Get result
-        run: echo "${{steps.set-result.outputs.result}}"
       - name: Set Version
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2
+        with:
+          node-version: '14.x'
       - run: npm version --no-git-tag-version "${{steps.set-result.outputs.result}}"
     
   build:
