--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -11,20 +11,25 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
-          node-version: 14
-      - run: npm run build
+          node-version: '14.x'
+      - run: npm ci
 
-  publish-npm:
+  npm:
     needs: build
     runs-on: windows-latest
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
-          node-version: 14
-          registry-url: https://registry.npmjs.org/
-      - run: npm install
-      - run: npm run build
-      - run: npm publish --new-version ${{github.event.release.tag_name}}
+          node-version: '14.x'
+      - name: Set Git Version
+        id: set-git-version
+        uses: actions/github-script@v3
+        with:
+          script: return context.ref.replace(/refs\/tags\//, '')
+          result-encoding: string
+      - run: npm ci
+      - run: npm version npm version --no-git-tag-version ${{steps.set-git-version.outputs.result}}
+      - run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
