--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -29,7 +29,7 @@ jobs:
           script: return context.ref.replace(/refs\/tags\//, '')
           result-encoding: string
       - run: npm ci
-      - run: npm version npm version --no-git-tag-version ${{steps.set-git-version.outputs.result}}
+      - run: npm version --new-version ${{steps.set-git-version.outputs.result}} --no-git-tag-version
       - run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
