--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -22,6 +22,7 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: '14.x'
+          registry-url: https://registry.npmjs.org/
       - name: Set Git Version
         id: set-git-version
         uses: actions/github-script@v3
